# domaestro

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  Makefile  README.md  env.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: backend.yaml  ci.yaml  ci.yaml.test  code-quality.yaml  dependencies.yaml  docker.yaml  publish.yaml  publish.yaml.old  release.yaml
app/: main.py
app/api/: domains.py  health.py  router.py
app/core/: auth.py  config.py  settings.py
app/schemas/: domain.py
app/services/: configs_manager.py  domain_service.py  template_service.py
app/utils/: dns.py  traefik.py
example/: .env  docker-compose.yaml
example/templates/: default.yaml
tests/: conftest.py  test_configs_manager.py  test_domain_service.py  test_main.py  test_template_service.py
